--- a/src/components/secondary-button.css
+++ b/src/components/secondary-button.css
@@ -4,7 +4,7 @@
 }
 .secondary-button-button {
   color: var(--dl-color-gray-white);
-  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
   transition: 0.3s;
   line-height: 1;
   padding-top: var(--dl-space-space-halfunit);
@@ -14,12 +14,16 @@
   padding-bottom: var(--dl-space-space-halfunit);
   text-transform: uppercase;
   background-color: var(--dl-color-secondary-300);
+  cursor: pointer;
 }
 .secondary-button-button:hover {
-  box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1),0 2px 4px -1px rgba(0,0,0,0.06);
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 .secondary-button-button:active {
-  background-color: var(--dl-color-secondary-100);
+  background-color: darkblue; /* Darker shade when active */
+  transform: scale(0.98); /* Slightly smaller */
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.75); /* Optional: inner shadow for depth */
 }
 .secondary-button-root-class-name {
   margin-top: var(--dl-space-space-unitandhalf);
