--- a/src/components/primary-button.css
+++ b/src/components/primary-button.css
@@ -13,10 +13,14 @@
   padding-bottom: var(--dl-space-space-halfunit);
   text-transform: uppercase;
   background-color: var(--dl-color-pimary-500);
+  cursor: pointer;
 }
 .primary-button-button:hover {
-  box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1),0 2px 4px -1px rgba(0,0,0,0.06);
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 .primary-button-button:active {
-  background-color: var(--dl-color-pimary-300);
+  background-color: darkblue; /* Darker shade when active */
+  transform: scale(0.98); /* Slightly smaller */
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.75); /* inner shadow for depth */
 }
