--- a/src/components/secondary-button.css
+++ b/src/components/secondary-button.css
@@ -23,7 +23,7 @@
 .secondary-button-button:active {
   background-color: darkblue; /* Darker shade when active */
   transform: scale(0.98); /* Slightly smaller */
-  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.75); /* Optional: inner shadow for depth */
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.75); /* inner shadow for depth */
 }
 .secondary-button-root-class-name {
   margin-top: var(--dl-space-space-unitandhalf);
