add popup to handle response from api gateway

--- a/src/views/home.css
+++ b/src/views/home.css
@@ -141,7 +141,8 @@
   width: 30%;
   display: flex;
   padding: var(--dl-space-space-unit);
-  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
   align-items: center;
   border-radius: var(--dl-radius-radius-radius50);
   flex-direction: column;
@@ -152,7 +153,8 @@
   width: 3rem;
   height: 3rem;
   display: flex;
-  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
   align-items: center;
   border-radius: var(--dl-radius-radius-round);
   flex-direction: column;
@@ -183,7 +185,8 @@
   width: 30%;
   display: flex;
   padding: var(--dl-space-space-unit);
-  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
   align-items: center;
   border-radius: var(--dl-radius-radius-radius50);
   flex-direction: column;
@@ -194,7 +197,8 @@
   width: 3rem;
   height: 3rem;
   display: flex;
-  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
   align-items: center;
   border-radius: var(--dl-radius-radius-round);
   flex-direction: column;
@@ -225,7 +229,8 @@
   width: 30%;
   display: flex;
   padding: var(--dl-space-space-unit);
-  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
   align-items: center;
   border-radius: var(--dl-radius-radius-radius50);
   flex-direction: column;
@@ -236,7 +241,8 @@
   width: 3rem;
   height: 3rem;
   display: flex;
-  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
   align-items: center;
   border-radius: var(--dl-radius-radius-round);
   flex-direction: column;
@@ -284,7 +290,8 @@
   flex: 0 0 auto;
   display: flex;
   padding: var(--dl-space-space-unit);
-  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
   align-items: center;
   border-radius: var(--dl-radius-radius-round);
   margin-bottom: var(--dl-space-space-unit);
@@ -327,13 +334,14 @@
   width: 33%;
   display: flex;
   position: relative;
-  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
   align-items: flex-start;
   margin-left: auto;
   margin-right: auto;
   border-radius: var(--dl-radius-radius-radius50);
   flex-direction: column;
-  background-color: #09A6E9;
+  background-color: #09a6e9;
 }
 .home-container11 {
   width: 100%;
@@ -344,7 +352,7 @@
   flex-direction: column;
   background-size: cover;
   justify-content: flex-end;
-  background-image: url('https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80');
+  background-image: url("https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80");
   background-position: center;
   border-top-left-radius: var(--dl-radius-radius-radius50);
   border-top-right-radius: var(--dl-radius-radius-radius50);
@@ -451,7 +459,8 @@
   width: 4rem;
   height: 4rem;
   display: flex;
-  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
   align-items: center;
   border-radius: var(--dl-radius-radius-round);
   flex-direction: column;
@@ -632,7 +641,7 @@
   border-radius: var(--dl-radius-radius-round);
   flex-direction: column;
   justify-content: center;
-  background-color: #37BCF8;
+  background-color: #37bcf8;
 }
 .home-icon17 {
   fill: var(--dl-color-gray-white);
@@ -666,7 +675,7 @@
   border-radius: var(--dl-radius-radius-round);
   flex-direction: column;
   justify-content: center;
-  background-color: #EC4999;
+  background-color: #ec4999;
 }
 .home-icon21 {
   fill: var(--dl-color-gray-white);
@@ -703,7 +712,7 @@
   border-radius: var(--dl-radius-radius-round);
   flex-direction: column;
   justify-content: center;
-  background-color: #BD195D;
+  background-color: #bd195d;
 }
 .home-icon23 {
   fill: var(--dl-color-gray-white);
@@ -757,7 +766,7 @@
   border-radius: var(--dl-radius-radius-round);
   flex-direction: column;
   justify-content: center;
-  background-color: #37BCF8;
+  background-color: #37bcf8;
 }
 .home-icon27 {
   fill: var(--dl-color-gray-white);
@@ -791,7 +800,7 @@
   border-radius: var(--dl-radius-radius-round);
   flex-direction: column;
   justify-content: center;
-  background-color: #BD195D;
+  background-color: #bd195d;
 }
 .home-icon31 {
   fill: var(--dl-color-gray-white);
@@ -828,7 +837,7 @@
   border-radius: var(--dl-radius-radius-round);
   flex-direction: column;
   justify-content: center;
-  background-color: #37BCF8;
+  background-color: #37bcf8;
 }
 .home-icon33 {
   fill: var(--dl-color-gray-white);
@@ -862,7 +871,7 @@
   border-radius: var(--dl-radius-radius-round);
   flex-direction: column;
   justify-content: center;
-  background-color: #EC4999;
+  background-color: #ec4999;
 }
 .home-icon37 {
   fill: var(--dl-color-gray-white);
@@ -879,7 +888,7 @@
   border-radius: var(--dl-radius-radius-round);
   flex-direction: column;
   justify-content: center;
-  background-color: #BD195D;
+  background-color: #bd195d;
 }
 .home-icon39 {
   fill: var(--dl-color-gray-white);
@@ -964,7 +973,7 @@
   font-weight: 600;
 }
 .home-text46 {
-  color: rgba(100,116,139,1);
+  color: rgba(100, 116, 139, 1);
   font-size: 1.25rem;
   text-align: center;
 }
@@ -998,7 +1007,7 @@
   font-weight: 600;
 }
 .home-text48 {
-  color: rgba(100,116,139,1);
+  color: rgba(100, 116, 139, 1);
   font-size: 1.25rem;
   text-align: center;
 }
@@ -1014,7 +1023,7 @@
   margin-top: var(--dl-space-space-halfunit);
 }
 .home-text50 {
-  color: rgba(255,255,255,0.75);
+  color: rgba(255, 255, 255, 0.75);
   width: 80%;
   text-align: center;
   font-weight: 300;
@@ -1038,10 +1047,10 @@
   line-height: 2rem;
 }
 .home-text52 {
-  color: rgba(100,116,139,1);
+  color: rgba(100, 116, 139, 1);
 }
 .home-text53 {
-  color: rgba(100,116,139,1);
+  color: rgba(100, 116, 139, 1);
   margin-top: var(--dl-space-space-halfunit);
   margin-left: 0.25rem;
   margin-bottom: var(--dl-space-space-halfunit);
@@ -1051,7 +1060,7 @@
   width: 100%;
   outline: 0;
   padding: var(--dl-space-space-triplequarter);
-  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
   transition: 0.3s;
   border-width: 0px;
   border-radius: var(--dl-radius-radius-radius4);
@@ -1061,7 +1070,7 @@
   box-shadow: 0 0 0 2px#4AA4E3;
 }
 .home-text54 {
-  color: rgba(100,116,139,1);
+  color: rgba(100, 116, 139, 1);
   margin-top: var(--dl-space-space-halfunit);
   margin-left: 0.25rem;
   margin-bottom: var(--dl-space-space-halfunit);
@@ -1071,7 +1080,7 @@
   width: 100%;
   outline: 0;
   padding: var(--dl-space-space-triplequarter);
-  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
   transition: 0.3s;
   border-width: 0px;
   border-radius: var(--dl-radius-radius-radius4);
@@ -1081,7 +1090,7 @@
   box-shadow: 0 0 0 2px#4AA4E3;
 }
 .home-text55 {
-  color: rgba(100,116,139,1);
+  color: rgba(100, 116, 139, 1);
   margin-top: var(--dl-space-space-halfunit);
   margin-left: 0.25rem;
   margin-bottom: var(--dl-space-space-halfunit);
@@ -1091,14 +1100,14 @@
   width: 100%;
   outline: 0;
   padding: var(--dl-space-space-triplequarter);
-  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
   transition: 0.3s;
   border-width: 0px;
   border-radius: var(--dl-radius-radius-radius4);
 }
 .home-textarea:focus {
   color: var(--dl-color-secondary-500);
-  box-shadow: 0 0 0 2px #4AA4E3;
+  box-shadow: 0 0 0 2px #4aa4e3;
 }
 .home-container49 {
   display: flex;
@@ -1116,7 +1125,7 @@
   position: absolute;
   object-fit: cover;
 }
-@media(max-width: 991px) {
+@media (max-width: 991px) {
   .home-cards-container {
     align-items: center;
     flex-direction: column;
@@ -1159,7 +1168,7 @@
     padding-bottom: var(--dl-space-space-doubleunit);
   }
 }
-@media(max-width: 767px) {
+@media (max-width: 767px) {
   .home-section1 {
     padding-left: var(--dl-space-space-doubleunit);
     padding-right: var(--dl-space-space-doubleunit);
@@ -1219,7 +1228,7 @@
     width: 100%;
   }
 }
-@media(max-width: 479px) {
+@media (max-width: 479px) {
   .home-container02 {
     padding-left: var(--dl-space-space-doubleunit);
     padding-right: var(--dl-space-space-doubleunit);
@@ -1255,4 +1264,43 @@
   .home-text51 {
     text-align: left;
   }
+}
+.popup {
+  position: fixed; /* Stay in place */
+  z-index: 1000; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  border-radius: 25px;
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+}
+
+.popup-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 25px;
+}
+
+.close-button {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close-button:hover,
+.close-button:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
